# flask-app-demo

./: .gitignore  README.md  app.py  pyproject.toml  test_app.py
weather-frontend/: package-lock.json  package.json
weather-frontend/src/: App.jsx  index.css
weather-frontend/src/components/ui/: alert.jsx  button.jsx  card.jsx  input.jsx
